--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -225,6 +225,32 @@ input, select{
   top: 6%;
 }
 
+.vak-image-container {
+  position: relative;
+}
+
+.vak-deur-afbeelding {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 2;
+}
+
+.vak-product-afbeelding {
+  z-index: 1;
+  position: relative;
+}
+
+.vak-nummer {
+  z-index: 3;
+  position: absolute;
+}
+
+
+
 @media (min-width: 1440px) {
   .row-1 .vak-nummer{
     font-size: 2rem;
