--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -196,8 +196,8 @@ input, select{
 
 .card-img{
   width: 100%;
-  padding: 0;
-  margin: 0;
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover; /* Prevent stretching and crop if necessary */
 }
 
 .vak-nummer{
@@ -287,9 +287,10 @@ input, select{
 /* cards */
 .card{
   display:flex;
+  align-items: center;
   background-color:rgb(224, 151, 72);
   width: 22%;
-  padding: 1%;
+  padding: 1rem;
 }
 
 .card-grid{
@@ -299,7 +300,7 @@ input, select{
   margin: 2%;
 }
 
-.card img{
+.card-img{
   width:50%;
   height: auto;
 }
