--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,15 +1,5 @@
 @import 'tailwindcss';
 
-@source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
-@source '../../storage/framework/views/*.php';
-@source '../**/*.blade.php';
-@source '../**/*.js';
-
-@theme {
-    --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-        'Segoe UI Symbol', 'Noto Color Emoji';
-}
-
 h1 {
   font-size: 1.5rem;
   font-weight: bold;
@@ -41,6 +31,14 @@ body{
 
 main{
   margin:0 2.5%;
+}
+
+button, .btn{
+  background-color: rgb(199, 105, 38);
+  color:rgb(242, 232, 207);
+  width: 100%;
+  padding: 0.5rem 1rem;
+  margin: 2%;
 }
 
 /* header */
@@ -81,7 +79,7 @@ padding: 14px 16px;
 text-decoration: none;
 }
 
-header li a:hover {
+header li a:hover, .logout-button:hover {
   background-color:rgb(56, 102, 65);
 }
 
@@ -110,35 +108,26 @@ header li a:hover {
   text-decoration: none;
 }
 
-.logout-button:hover {
-  background-color: rgb(56, 102, 65);
-}
-
 /* Login */
 .login {
   max-width: 30%;
-  margin: 0 auto;
   padding: 1rem;
   margin: 4rem auto;
   background-color:rgb(224, 151, 72);
 }
 
-.login button, .btn{
-  background-color: rgb(199, 105, 38);
-  color:rgb(242, 232, 207);
-  padding: 0.5rem 1rem;
+.login button {
   margin: 0.25rem 0.25rem;
-  width: 100%;
 }
 
-.login button:hover, .btn:hover{
+.login button:hover, .btn:hover, .add-btn:hover{
   background-color: rgb(189, 86, 12);
 }
 
 input, select, textarea {
   display: block;
   width: 100%;
-  margin: 0, 0.5rem;
+  margin: 0;
   padding: 0.5rem;
   background-color: rgb(242, 232, 207);
 }
@@ -194,17 +183,17 @@ input, select{
   position: relative;
 }
 
-.card-img{
+.card-img-automaat{
   width: 100%;
-  height: auto; /* Maintain aspect ratio */
-  object-fit: cover; /* Prevent stretching and crop if necessary */
+  height: auto;
+  object-fit: cover;
 }
 
 .vak-nummer{
   color: black;
   position: absolute;
-  top: 0;
   right: 8%;
+  z-index: 3;
 }
 
 .row-1 .vak-nummer{
@@ -224,7 +213,7 @@ input, select{
 
 .vak-image-container {
   position: relative;
-  aspect-ratio: 267 / 210; /* of een andere verhouding die past bij je ontwerp */
+  aspect-ratio: 267 / 210;
   width: 100%;
 }
 
@@ -241,11 +230,6 @@ input, select{
 .vak-product-afbeelding {
   z-index: 1;
   position: relative;
-}
-
-.vak-nummer {
-  z-index: 3;
-  position: absolute;
 }
 
 .verborgen {
@@ -326,9 +310,6 @@ input, select{
   font-size: 6rem;
 }
 
-.add-btn:hover{
-  background-color: rgb(189, 86, 12);
-}
 
 @media (min-width: 2560px) {
   .card{
@@ -342,17 +323,8 @@ input, select{
 
 /* Vakken informatie */
 table, th, td{
-  border: 1px, solid;
+  border: 1px solid;
   padding : 5px 10px;
-}
-
-/* Numpad */
-.numpad-btn{
-  width: 60px;
-  height: 60px;
-  font-size: 1.5rem;
-  margin: 5px;
-  cursor: pointer;
 }
 
 /* product kiezen */
@@ -361,30 +333,6 @@ table, th, td{
   margin: 0.5rem;
   padding: 1rem;
   width: 30%;
-}
-
-.numpad {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 10px; /* spacing tussen knoppen */
-  margin: 0 auto;
-  width: 80%;
-}
-
-.numpad-btn {
-  height: 60px;
-  font-size: 1.5rem;
-  width: 100%; /* neem volledig beschikbare grid-breedte */
-  margin: 0; /* geen extra buitenruimte */
-}
-
-
-.betalen-container button{
-  background-color: rgb(199, 105, 38);
-  color:rgb(242, 232, 207);
-  padding: 0.5rem 1rem;
-  margin: 2%;
-  box-sizing: border-box;
 }
 
 .betalen-container button:hover{
@@ -402,7 +350,7 @@ table, th, td{
 }
 
 .product-keuze button{
-  margin: 5px;
   margin-left: auto;
   padding: 2.5px 2rem;
+  width: 25%;
 }
