--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,7 +38,11 @@ button, .btn{
   color:rgb(242, 232, 207);
   width: 100%;
   padding: 0.5rem 1rem;
-  margin: 2%;
+  margin: 2% 0;
+}
+
+.table{
+  width: 100%;
 }
 
 /* header */
