--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -34,11 +34,13 @@ main{
 }
 
 button, .btn{
+  display: inline-block;
   background-color: rgb(199, 105, 38);
   color:rgb(242, 232, 207);
+  text-align: center;
   width: 100%;
   padding: 0.5rem 1rem;
-  margin: 2% 0;
+  margin: 0.75rem 0;
 }
 
 .table{
@@ -99,7 +101,9 @@ header li a:hover, .logout-button:hover {
 
 .welcome-text{
   color: rgb(242, 232, 207);
-  padding: 14px 16px;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
 }
 
 .logout-button {
@@ -108,8 +112,10 @@ header li a:hover, .logout-button:hover {
   color: white;
   cursor: pointer;
   font-size: 1rem;
-  padding: 14px 16px;
+  padding: 1rem;
   text-decoration: none;
+  display: flex;
+  align-items: center;
 }
 
 /* Login */
@@ -351,10 +357,10 @@ table, th, td{
   display: flex;
   padding: 0;
   margin: 0;
+  align-items: center;
 }
 
 .product-keuze button{
   margin-left: auto;
-  padding: 2.5px 2rem;
   width: 25%;
 }
